--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Josh's Website</title>
+</head>
+<body>
+    I love my <h1>WIFE</h1>
+</body>
+</html>
