Now featuring: list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Josh's Website</title>
 </head>
 <body>
-    I love my <h1>WIFE</h1>
+    <h1>Things I love:</h1>
+    <h2><ol>
+        <li>my wife</li>
+        <li>my wife</li>
+        <li>my wife</li>
+        <li>my wife</li>
+        <li>my wife</li>
+        <li>my wife</li>
+    </ol></h2>
 </body>
 </html>
