--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <h1>Things I love:</h1>
     <h2><ol>
-        <li>my wife</li>
-        <li>my wife</li>
-        <li>my wife</li>
-        <li>my wife</li>
-        <li>my wife</li>
-        <li>my wife</li>
+        <li>MY WIFE</li>
+        <li>this dog</li>
+        <img src="images/dog.jpg" alt="">
+        <li>MY WIFE</li>
+        <li>MY WIFE</li>
+        <li>MY WIFE</li>
+        <li>MY WIFE</li>
     </ol></h2>
 </body>
 </html>
