Now featuring: Buddy Ramirez

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>Things I love:</h1>
     <h2><ol>
         <li>MY WIFE</li>
+        <li>MY WIFE</li>
+        <li>MY WIFE</li>
+        <li>MY WIFE</li>
+        <li>MY WIFE</li>
         <li>this dog</li>
-        <img src="images/dog.jpg" alt="">
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
+        <img src="https://i.imgur.com/5pSG3JM.png" alt="">
     </ol></h2>
 </body>
 </html>
