--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>MY WIFE</li>
         <li>MY WIFE</li>
         <li>this dog</li>
-        <img src="https://i.imgur.com/5pSG3JM.png" alt="">
+        <img src="https://i.imgur.com/5pSG3JM.png" alt="cute picture of my dog">
     </ol></h2>
 </body>
 </html>
