--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <li>this dog</li>
         <img src="https://i.imgur.com/5pSG3JM.png" alt="cute picture of my dog">
     </ol></h2>
+    <small><a href="pages/about.html">ABOUT THE AUTHOR</a></small>
 </body>
 </html>
