--- a/pages/about.html
+++ b/pages/about.html
@@ -17,6 +17,8 @@
             <li>diced</li>
             <li>juiced</li>
             <li>buff</li>
+            <li>absolutely yoked beyond belief</li>
+            <li>humble</li>
         </ol>
     </h2>
 </body>
