--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh's Website</title>
 </head>
+
+<style>
+    body {background-color: teal;}
+    body {color: lightskyblue;}
+</style>
+
+
 <body>
     <h1>Things I love:</h1>
     <h2><ol>
@@ -19,4 +27,5 @@
     </ol></h2>
     <small><a href="pages/about.html">ABOUT THE AUTHOR</a></small>
 </body>
+
 </html>
