--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh's Website</title>
 </head>
-
-<style>
-    body {background-color: teal;}
-    body {color: lightskyblue;}
-</style>
+<body style="background-color: black; color: white; text-align: center; list-style-position: inside;">
+    <h1>About the author:</h1>
 
 
-<body>
-    <h1>Things I love:</h1>
-    <h2><ol>
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
-        <li>MY WIFE</li>
-        <li>this dog</li>
-        <img src="images/dog.jpg" alt="cute picture of my dog">
-    </ol></h2>
-    <small><a href="pages/about.html">ABOUT THE AUTHOR</a></small>
+    <h2>
+        <ol>
+            <li>buff</li>
+            <li>jacked</li>
+            <li>ripped</li>
+            <li>muscular</li>
+            <li>diced</li>
+            <li>juiced</li>
+            <li>buff</li>
+            <li>absolutely yoked beyond belief</li>
+            <li>humble</li>
+        </ol>
+    </h2>
 </body>
-
 </html>
