--- a/pages/dais.html
+++ b/pages/dais.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ｄａｉｓ</title>
-    <link rel="icon" type="image/x-icon" href="../images/dais_favicon.png">
 </head>
 <body style="text-align: center; background-color: black; color: white;">
     <h1>ｈｏｗ&nbsp&nbsp&nbsp&nbsp&nbspｍａｎｙ&nbsp&nbsp&nbsp&nbsp&nbspｄａｉｓ&nbsp&nbsp&nbsp&nbsp&nbspｕｎｔｉｌ&nbsp&nbsp&nbsp&nbsp&nbspｓｈｅ＇ｓ&nbsp&nbsp&nbsp&nbsp&nbspｍｉｎｅ</h1>
 
+    <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+    <a href="https://logwork.com/countdown-yo5r" class="countdown-timer" data-style="columns" data-timezone="America/Los_Angeles" data-textcolor="#000000" data-date="2023-09-04 00:00" data-background="#000000" data-digitscolor="#ffffff">Countdown Timer</a>
 
 </body>
 </html>
