--- a/pages/dais.html
+++ b/pages/dais.html
@@ -10,7 +10,7 @@
     <h1>ｈｏｗ&nbsp&nbsp&nbsp&nbsp&nbspｍａｎｙ&nbsp&nbsp&nbsp&nbsp&nbspｄａｉｓ&nbsp&nbsp&nbsp&nbsp&nbspｕｎｔｉｌ&nbsp&nbsp&nbsp&nbsp&nbspｓｈｅ＇ｓ&nbsp&nbsp&nbsp&nbsp&nbspｍｉｎｅ</h1>
 
     <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-    <a href="https://logwork.com/countdown-yo5r" class="countdown-timer" data-style="columns" data-timezone="America/Los_Angeles" data-textcolor="#000000" data-date="2023-09-04 00:00" data-background="#000000" data-digitscolor="#ffffff">Countdown Timer</a>
+    <a href="https://logwork.com/countdown-yo5r" class="countdown-timer" data-style="columns" data-timezone="America/Los_Angeles" data-textcolor="#000000" data-date="2023-09-04 00:00" data-background="#000000" data-digitscolor="#ffffff" style="pointer-events: none;">Countdown Timer</a>
 
 </body>
 </html>
