Add Leaneth Beefeth Patricia

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh's Website</title>
 </head>
-<body style="background-color: black; color: white; text-align: center; list-style-position: inside;">
+<body style="background-color: black; color: white; text-align: center; list-style-position: inside; background-image: url(images/lean_beef_patty.png); background-repeat: no-repeat; background-position-x: center; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">
     <h1>About the author:</h1>
 
 
@@ -23,5 +23,7 @@
             <li>humble</li>
         </ol>
     </h2>
+
+    <!-- <img src="images/lean_beef_patty.png" alt="lean beef patty" style="background-image: inherit;"> -->
 </body>
 </html>
