--- a/pages/dais.html
+++ b/pages/dais.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,5 +12,7 @@
     <script src="https://cdn.logwork.com/widget/countdown.js"></script>
     <a href="https://logwork.com/countdown-yo5r" class="countdown-timer" data-style="columns" data-timezone="America/Los_Angeles" data-textcolor="#000000" data-date="2023-09-04 00:00" data-background="#000000" data-digitscolor="#ffffff" style="pointer-events: none;">Countdown Timer</a>
 
+    <label for="pwd">Password:</label>
+    <input type="password" id="pwd" name="pwd"> 
 </body>
 </html>
