Remove auto-translate from dais.html

--- a/pages/dais.html
+++ b/pages/dais.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" translate="no">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ｄａｉｓ</title>
+    <title translate="no">ｄａｉｓ</title>
 </head>
 <body style="text-align: center; background-color: black; color: white;">
-    <h1>ｈｏｗ&nbsp&nbsp&nbsp&nbsp&nbspｍａｎｙ&nbsp&nbsp&nbsp&nbsp&nbspｄａｉｓ&nbsp&nbsp&nbsp&nbsp&nbspｕｎｔｉｌ&nbsp&nbsp&nbsp&nbsp&nbspｓｈｅ＇ｓ&nbsp&nbsp&nbsp&nbsp&nbspｍｉｎｅ</h1>
+    <h1 translate="no">ｈｏｗ&nbsp&nbsp&nbsp&nbsp&nbspｍａｎｙ&nbsp&nbsp&nbsp&nbsp&nbspｄａｉｓ&nbsp&nbsp&nbsp&nbsp&nbspｕｎｔｉｌ&nbsp&nbsp&nbsp&nbsp&nbspｓｈｅ＇ｓ&nbsp&nbsp&nbsp&nbsp&nbspｍｉｎｅ</h1>
 
     <script src="https://cdn.logwork.com/widget/countdown.js"></script>
     <a href="https://logwork.com/countdown-yo5r" class="countdown-timer" data-style="columns" data-timezone="America/Los_Angeles" data-textcolor="#000000" data-date="2023-09-04 00:00" data-background="#000000" data-digitscolor="#ffffff" style="pointer-events: none;">Countdown Timer</a>
-
-    <label for="pwd">Password:</label>
-    <input type="password" id="pwd" name="pwd"> 
+    <p>test</p>
 </body>
 </html>
